fixed the issue of "Drag components here" drop area missing in editor.html

--- a/theme/src/components/experiencefragment/_experiencefragment_footer.css
+++ b/theme/src/components/experiencefragment/_experiencefragment_footer.css
@@ -26,6 +26,11 @@ it.
     .xf-content-height .root .cmp-container {
         height: 8.5rem;
     }
+    .xf-content-height {
+        & > .root > .cmp-container {
+            height: 100%;
+        }
+    }
     #mainDiv .button {
         margin-left: 0rem !important;
     }
