--- a/theme/src/components/experiencefragment/_experiencefragment_header.css
+++ b/theme/src/components/experiencefragment/_experiencefragment_header.css
@@ -18,6 +18,9 @@ it.
     .xf-content-height {
         margin:0;
         height: 4rem;
+        & > .root > .cmp-container {
+            height: 100%;
+        }
     }
     
     #header-end .cmp-button {
