--- a/theme/src/site/_base.css
+++ b/theme/src/site/_base.css
@@ -169,13 +169,13 @@ select {
 }
 
 .new.newpar.section.aem-Grid-newComponent {
-  display: none;
+  /* display: none; */
 }
 .new.newpar.section {
-  display: none;
+  /* display: none; */
 }
 #topic-page{
-  height: 100%;
+  /* height: 100%; */
 }
 
 *[data-tcx-rotate = '270deg'] {
@@ -189,7 +189,7 @@ select {
 }
 
 #topic-page > .aem-Grid{
-  height: 100%;
+  /* height: 100%; */
 
 }
 
@@ -228,9 +228,9 @@ select {
 }
 
 .root .cmp-container {
-  height: 100%;
+  /* height: 100%; */
 }
 
 .root .cmp-container .main {
-  min-height: calc(100% - 17.0rem);
+  /* min-height: calc(100% - 17.0rem); */
 }
